// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seo ssr test common meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <meta name="attrFromPageService" content="\${SERVER_URL}/seo/common/" data-meta-dynamic="true" >
    <link rel="canonical" href="test-canonical" data-meta-dynamic="true" >
    <meta name="keywords" content="test,common,seo" data-meta-dynamic="true" >
    <meta name="robots" content="none" data-meta-dynamic="true" >
    <meta name="robots" content="noindex, nofollow" data-meta-dynamic="true" >
    <meta name="robots" content="noarchive" data-meta-dynamic="true" >
    <title data-meta-dynamic="true">common seo</title>
    <meta name="viewport" content="test seo" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script>
      window.__TRAMVAI_HTML_READY_PROMISE__ = new Promise((resolve) => {
        window.__TRAMVAI_HTML_READY_RESOLVE__ = resolve;
      });
    </script>
    <script>
      window.__preloadJS = (function onload(next) {
        let called = false;
        return () => {
          if (!called) {
            called = true;
            const { head } = document;
            next.forEach((entry) => {
              const link = document.createElement("link");
              if (entry.integrity) {
                link.integrity = entry.integrity;
              }
              link.rel = "preload";
              link.href = entry.url;
              link.as = "script";
              link.charset = "utf-8";
              link.crossOrigin = "anonymous";
              head.appendChild(link);
            });
          }
        };
      })([
        { url: "\${STATIC_URL}/dist/client/root.chunk.js" },
        { url: "\${STATIC_URL}/dist/client/react.js" },
        { url: "\${STATIC_URL}/dist/client/platform.js" },
      ]);
    </script>
    

    
    
    <style type="text/css"></style>
    <link crossorigin="anonymous" data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/react.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test common meta 2`] = `
"
      {
        "@graph": [{ "url": "https://www.tinkoff.ru/", "name": "Тинькофф Банк", "@type": "BankOrCreditUnion" }],
        "@context": "http://schema.org"
      }
    "
`;

exports[`seo ssr test default meta pack 1`] = `
"
    <meta charset="UTF-8" >
    
    <meta name="attrFromPageService" content="\${SERVER_URL}/seo/default/" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link crossorigin="anonymous" data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/react.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test json-ld meta 1`] = `
"
      {
        "@graph": [{ "url": "https://www.tinkoff.ru/", "name": "Тинькофф Банк", "@type": "BankOrCreditUnion" }],
        "@context": "http://schema.org"
      }
    "
`;

exports[`seo ssr test og meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <meta name="attrFromPageService" content="\${SERVER_URL}/seo/og/" data-meta-dynamic="true" >
    <title data-meta-dynamic="true">og seo</title>
    <meta property="og:description" content="og desc" data-meta-dynamic="true" >
    <meta property="og:image" content="og img" data-meta-dynamic="true" >
    <meta property="og:image:alt" content="alt og img" data-meta-dynamic="true" >
    <meta property="og:image:secure_url" content="seo imageSecure" data-meta-dynamic="true" >
    <meta property="og:image:height" content="seo 630" data-meta-dynamic="true" >
    <meta property="og:image:width" content="seo 1200" data-meta-dynamic="true" >
    <meta property="og:image:type" content="ggog" data-meta-dynamic="true" >
    <meta property="og:locale" content="locog" data-meta-dynamic="true" >
    <meta property="og:site_name" content="site og name" data-meta-dynamic="true" >
    <meta property="og:title" content="hello, og" data-meta-dynamic="true" >
    <meta property="og:type" content="og typ" data-meta-dynamic="true" >
    <meta property="og:url" content="http://og.og/" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link crossorigin="anonymous" data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/react.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test robots all meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <meta name="attrFromPageService" content="\${SERVER_URL}/robots/all/" data-meta-dynamic="true" >
    <meta name="robots" content="all" data-meta-dynamic="true" >
    <meta name="robots" content="index, follow" data-meta-dynamic="true" >
    <meta name="robots" content="noarchive" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link crossorigin="anonymous" data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/react.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test robots skip meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <meta name="attrFromPageService" content="\${SERVER_URL}/robots/skip/" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    <script></script>
    

    
    <link crossorigin="anonymous"
      data-critical="true"
      onload="__preloadJS()"
      rel="stylesheet"
      href="\${STATIC_URL}/dist/client/root.chunk.css"
    >
    

    

    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/react.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;

exports[`seo ssr test twitter meta 1`] = `
"
    <meta charset="UTF-8" >
    
    <meta name="attrFromPageService" content="\${SERVER_URL}/seo/twitter/" data-meta-dynamic="true" >
    <title data-meta-dynamic="true">twitter seo</title>
    <meta name="twitter:card" content="twitter card" data-meta-dynamic="true" >
    <meta name="twitter:creator" content="creat" data-meta-dynamic="true" >
    <meta name="twitter:image" content="img tw" data-meta-dynamic="true" >
    <meta name="twitter:image:alt" content="seo tw im al" data-meta-dynamic="true" >
    <meta name="twitter:site" content="seo @tinkoff_bank" data-meta-dynamic="true" >
    <meta name="twitter:title" content="hello, twitter" data-meta-dynamic="true" >
    <meta name="metaCustomNameAttribute" content="metaCustomContent" data-meta-dynamic="true" >
    

    
    <script></script>
    <script></script>
    

    
    
    <style type="text/css"></style>
    <link crossorigin="anonymous" data-href="\${STATIC_URL}/dist/client/root.chunk.css" rel="stylesheet" >
    

    

    

    

    

    

    

    
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/root.chunk.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/react.js"
    ></script>
    <script defer="defer"
      charset="utf-8"
      crossorigin="anonymous"
      data-critical="true"
      src="\${STATIC_URL}/dist/client/platform.js"
    ></script>
    

    

    

    

    
  "
`;
